<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.veryedu.titles.MainActivity" >
    <RelativeLayout 
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
    <TextView 
        android:id="@+id/two_name"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="15dp"
    	android:text="@string/name"
        />
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/ysbx"
    	android:layout_alignParentRight="true"
    	android:layout_marginRight="30dp"
        />
	</RelativeLayout>
	<RelativeLayout 
	    android:layout_marginTop="5dp"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="15dp"
    	android:text="@string/dqhbx"
        />
    
    <TextView 
        android:id="@+id/two_money"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/bj"
    	android:layout_alignParentRight="true"
    	android:layout_marginRight="30dp"
        />
	</RelativeLayout>
	
</LinearLayout>
