<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.veryedu.titles.MainActivity" >
    <LinearLayout 
        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/three_name" 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/name"
    	android:layout_marginLeft="20dp"
    	android:layout_weight="1"
        />
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/bj"
    	android:gravity="center"
    	android:layout_weight="1"
        />
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/lx"
    	android:gravity="center"
    	android:layout_weight="1"
        />
	</LinearLayout>
	<LinearLayout
	    android:layout_marginTop="5dp"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
    
    <TextView 
        android:id="@+id/three_time"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/time"
    	android:layout_marginLeft="20dp"
    	android:layout_weight="1"
        />
    <TextView
        android:id="@+id/three_bx" 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/bj"
		android:layout_weight="1"
        />
     <TextView 
        android:id="@+id/three_lx" 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/lx"
    	android:gravity="center"
    	android:layout_weight="1"
        />
   
	</LinearLayout>
	
</LinearLayout>
